--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^0.26.0",
     "expo": "^44.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -7,7 +8,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "babel-plugin-inline-dotenv": "^1.6.0"
   },
   "scripts": {
     "start": "expo start",
@@ -17,5 +19,5 @@
   },
   "version": "1.0.0",
   "private": true,
-  "name": "deloitte"
+  "name": "flickerImagesReactNative"
 }
