--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "prettier": "^2.5.1"
   },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prepare": "husky install"
   },
   "version": "1.0.0",
   "private": true,
-  "name": "flickerImagesReactNative"
+  "name": "flickerImagesReactNative",
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
+  }
 }
