--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
@@ -39,6 +41,6 @@
   "private": true,
   "name": "flickerImagesReactNative",
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": "eslint --cache --fix"
+    "**/*.{js,jsx}": "eslint --cache --fix"
   }
 }
